# EEGAnotator

./: .gitignore  Data_60mints - new.xlsx  LICENSE.lic  README.md  app.py  app1.py  app2.py  config.py  environment.yml  main.py  mappings.csv  output.txt  pyproject.toml  requirements.txt  run.py  setup.py  tcode.txt  test.ipynb  test1.py  utils.py  words_actions_eeg_data_indexes
.github/workflows/: python-package-conda.yml
notebooks/: test.ipynb
src/: audio.py  config.py  eeg.py  main.py  run.py  utils.py
src/GUI/: main.py  mapping_display.py  utils.py
src/classes/: audio.py  eeg.py  eeg_audio.py  utils.py
src/code/: audio.py  eeg.py  utils.py
src/gui/: mainDisplay.py  mainDisplay1.py  main_display.py  main_display1.py  mappingDisplay.py  mappingDisplay1.py  mapping_display.py  mapping_display1 copy.py  mapping_display1.py  mapping_display2.py  mapping_display3.py  test.py  utils.py
tests/: test
