[tool.poetry]
name = "eeg anotator"
version = "0.0.1"
description = "Anotator for segmentation and visualiation of eeg data"
authors = ["y"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
mne = "^1.7.0"
pyxdf = "^1.16.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
